--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <title>My Github pages</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="css/reset.css">
     </head>
     <body>
         <!--[if lt IE 7]>
