--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <h1>Hello world!, my name is Baruch</h1>
+        <h1>Hello world! My name is Baruch</h1>
         
     </body>
 </html>
